--- a/DongAutoClicker.vcxproj
+++ b/DongAutoClicker.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="DongAutoClickerDlg.h" />
     <ClInclude Include="MouseInformation.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SequenceDlg.h" />
     <ClInclude Include="SetupDlg.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -114,6 +115,7 @@
     <ClCompile Include="DongAutoClicker.cpp" />
     <ClCompile Include="DongAutoClickerDlg.cpp" />
     <ClCompile Include="MouseInformation.cpp" />
+    <ClCompile Include="SequenceDlg.cpp" />
     <ClCompile Include="SetupDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
